2008-12-22  Piotr Fusik  <fox@scene.pl>
* asap.c: added explicit cast of "void *" to "byte *"


2008-12-08  Piotr Fusik  <fox@scene.pl>
* win32/dshow/asap_dsf.cpp: an error code could be overwritten

* Makefile.in, java/Makefile: added ".DELETE_ON_ERROR"

* win32/Makefile: convert text files for Windows to CR/LF
  if checked out by CVS with LFs

* asap2wav.1: slightly improved

* asap.c: C# implementation of ASAP_IsOurExt()


2008-11-28  Piotr Fusik  <fox@scene.pl>
* chksap.pl: support millisecond precision of TIME tags

* win32/Makefile: updated for foobar2000 SDK 2008-09-22


2008-11-27  Piotr Fusik  <fox@scene.pl>
* win32/Makefile: removed "/opt:nowin98" because it's not supported in VS2008


2008-08-01  Dominik Wenger  <domonoky@googlemail.com>
* asap.h: added "signed" to "delta_buffer" declaration


2008-06-22  Piotr Fusik  <fox@scene.pl>
* apokeysnd.c: DO_STORE(skctl)


2008-06-14  Piotr Fusik  <fox@scene.pl>
* apokeysnd.c: fixed 1.77 MHz sound enabled in the INIT state


2008-05-25  Piotr Fusik  <fox@scene.pl>
* java/ASAPMIDlet.java: increased buffer size and implemented array read
  for improved performance


2008-05-23  Piotr Fusik  <fox@scene.pl>
* asap.c: author, name and date are empty strings in Java and C#
  if specified as "<?>" in a SAP file

* java/ASAPMIDlet.java: display author, name, date, progress bar
  and ASAP version; subsong selection


2008-05-12  Piotr Fusik  <fox@scene.pl>
* apokeysnd.c: un-mute for RMT DLL


2008-05-10  Piotr Fusik  <fox@scene.pl>
* Makefile.in, xbmc/xbmc_asap.c, INSTALL: Linux XBMC plugin


2008-05-07  Piotr Fusik  <fox@scene.pl>
* apokeysnd.c, asap.c, asap_internal.h, win32/gui.rc, win32/Makefile:
  POKEY sound emulator DLL for RMT


2008-04-19  Piotr Fusik  <fox@scene.pl>
* asap.c, csharp/ASAP.ppcs, java/ASAP.ppjava: refactoring of load_native()


2008-04-18  Piotr Fusik  <fox@scene.pl>
* win32/gui.rc: don't require Windows SDK for building XBMC plugin

* win32/Makefile, INSTALL: compile XBMC plugin with VC 2003

